--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         <li><a href="#experience" class="navbar-link">Experience</a></li>
         <li><a href="#projects" class="navbar-link">Projects</a></li>
         <li><a href="#contact" class="navbar-link">Contact</a></li>
+        <li>
+          <button id="theme-toggle" class="button button-secondary" title="Toggle Theme">
+            <i class="fas fa-moon"></i>
+          </button>
+        </li>
+
       </ul>
     </div>
   </nav>
